# cds-examples

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  get.ipynb  lake-surface-water-temperature.csv  lake-surface-water-temperature.ipynb  pyproject.toml  requirements.txt  satellite-lake-water-temperature.csv  satellite-lake-water-temperature.ipynb  sgc-udp-upload.ipynb  shell.nix  sis-ecde-climate-indicators.py  sis-ecde-climate-indicators.sh  sis-heat-and-cold-spells.ipynb
