[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cds-examples"
version = "0.0.1"
authors = [
  { name="Patrik Keller", email="patrik.keller@konstanz.de" },
  { name="Tim Tewes", email="tim.tewes@konstanz.de" },
]
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cdsapi",
    "dask",
    "matplotlib",
    "netcdf4",
    "notebook",
    "rasterio",
    "xarray",
]

[project.urls]
Homepage = "https://github.com/sgc-kn/cds-examples"
Issues = "https://github.com/sgc-kn/cds-examples/issues"
